a1/brendan_gordon/TEST_PROGRAMS/invalidtype/eric_ditomasso/assignment.min
# this tests invalid variable assignment
# trying to assign a float to an int
var x: int;
x = 4.;
